src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>dncau__Contact_DNC__c</fullName>
        <description>Returns true if any of the standard contact phone fields are flagged as &apos;Do not call&apos;</description>
        <formula>IF(
OR (
  ISPICKVAL(dncau__Fax_DNC_Status__c, &apos;Do not call&apos;),
  ISPICKVAL(dncau__MobilePhone_DNC_Status__c, &apos;Do not call&apos;),
  ISPICKVAL(dncau__Phone_DNC_Status__c, &apos;Do not call&apos;),
  ISPICKVAL(dncau__HomePhone_DNC_Status__c, &apos;Do not call&apos;),
  ISPICKVAL(dncau__OtherPhone_DNC_Status__c, &apos;Do not call&apos;)
), 
&apos;Do not call&apos;, 
 IF(
  OR (
   ISPICKVAL(dncau__Fax_DNC_Status__c, &apos;Retryable Error&apos;),
   ISPICKVAL(dncau__MobilePhone_DNC_Status__c, &apos;Retryable Error&apos;),
   ISPICKVAL(dncau__Phone_DNC_Status__c, &apos;Retryable Error&apos;),
   ISPICKVAL(dncau__HomePhone_DNC_Status__c, &apos;Retryable Error&apos;),
   ISPICKVAL(dncau__OtherPhone_DNC_Status__c, &apos;Retryable Error&apos;)
  )
 ,&apos;Retryable Error&apos;,

  IF(
   OR (
    ISPICKVAL(dncau__Fax_DNC_Status__c, &apos;Can call&apos;),
    ISPICKVAL(dncau__MobilePhone_DNC_Status__c, &apos;Can call&apos;),
    ISPICKVAL(dncau__Phone_DNC_Status__c, &apos;Can call&apos;),
    ISPICKVAL(dncau__HomePhone_DNC_Status__c, &apos;Can call&apos;),
    ISPICKVAL(dncau__OtherPhone_DNC_Status__c, &apos;Can call&apos;)
   )
  ,&apos;Can call&apos;, &apos;&apos;)
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact DNC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dncau__Fax_DNC_Checked__c</fullName>
        <label>Fax Last Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dncau__Fax_DNC_Status__c</fullName>
        <label>Fax DNC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Can call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retryable Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>dncau__HomePhone_DNC_Checked__c</fullName>
        <label>Home Phone Last Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dncau__HomePhone_DNC_Status__c</fullName>
        <label>Home Phone DNC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Can call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retryable Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>dncau__MobilePhone_DNC_Checked__c</fullName>
        <label>Mobile Last Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dncau__MobilePhone_DNC_Status__c</fullName>
        <label>Mobile DNC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Can call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retryable Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>dncau__OtherPhone_DNC_Checked__c</fullName>
        <label>Other Phone Last Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dncau__OtherPhone_DNC_Status__c</fullName>
        <label>Other Phone DNC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Can call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retryable Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>dncau__Phone_DNC_Checked__c</fullName>
        <label>Phone Last Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dncau__Phone_DNC_Status__c</fullName>
        <label>Phone DNC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Can call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retryable Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>